--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,22 +59,17 @@ html, body {
       width: 1260px;
       height: 518px;
       margin-bottom: 32px;
-      background-color: azure;
 
       &-stuff {
-        width: 780px;
+        width: 757px;
         height: 278px;
-        background-color: cadetblue;
 
         &-Text {
-          text-align: center;
 
           &-Big {
-            font-size: 56px;
-            font-family: monospace;
             font-weight: 800;
             text-rendering: geometricPrecision;
-            font-size: clamp(24px,5vw,65px);
+            font-size: clamp(24px,5vw,75px);
             line-height: 95%
           }
 
@@ -83,8 +78,17 @@ html, body {
             font-size: 19px;
             text-align: center;
             font-weight: 250;
-            margin-top: 20px
+            margin-top: 25px;
+            margin-bottom: 32px;
           }
+        }
+
+        &-Buttons {
+          width: 100%;
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          gap: 31px;
         }
       }
     }
