--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,10 @@ $primary: #404eed;
   --font-headline: "Ginto Nord","Whitney","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
+.color {
+  background: $primary !important;
+}
+
 html,body {
   margin: 0;
   overflow-x: hidden;
@@ -38,7 +42,6 @@ html,body {
 .Literally_Everything {
   width: 100vw;
   height: 100vh;
-  
 
   &-First {
     background-color: $primary;
@@ -135,6 +138,105 @@ html,body {
     }
   }
 }
+
+.FooterContainer {
+  width: 100%;
+  height: 511px;
+  background-color: #23272A;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Footer {
+  width: 1260px;
+  height: 367px;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+
+  &-TopPart {
+    width: 1260px;
+    height: 296px;
+    border-bottom: #5865f2 1px solid; 
+    display: flex;
+    flex-direction: row;
+    gap: 80px;
+    justify-content: space-between;
+
+    &-SocialMedia {
+      width: 280px;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+
+      &-Imagine {
+        color: #5865f2;
+        font-weight: 800;
+        text-rendering: geometricPrecision;
+        font-size: 37px;
+        line-height: 95%;
+      }
+    }
+
+    &-ALot {
+      width: 720px;
+      height: 296px;
+      display: flex;
+      flex-direction: row;
+
+      &-component {
+        width: 180px;
+        height: 296px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        
+        &-title {
+          color: #5865f2;
+          font-size: 16px;
+        }
+
+        &-content {
+          color: white;
+          font-size: 15px;
+          &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+
+  &-BottomPart {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    height: 71px;
+    align-items: center;
+    
+    &-Button {
+      min-width: 113px;
+      border-radius: 100px !important;
+      width: 113px;
+      height: 40px;
+      font-size: 14px !important;
+      font-weight: 500 !important;
+      background-color: #5865f2 !important;
+      color: white !important;
+    }
+  }
+}
+
+.btn-secondary {
+  background-color: #23272A !important;
+  border-color: #23272A !important;
+}
+
+
 
 .carousel-stuff {
   width: 100vw;
