--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -152,6 +152,143 @@ body {
   height: 408px;
   background-color: #36393f;
   position: absolute;
+
+  &-inner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &-2 {
+      width: 720px;
+      height: 344px;
+      display: flex;
+      justify-content: space-between;
+      flex-direction: row;
+
+      &-leftside {
+        width: 414px;
+        height: 342px;
+        display: flex;
+        flex-direction: column;
+        gap: 11px;
+
+        &-introduction {
+          width: 414px;
+          height: 58px;
+          display: flex;
+          flex-direction: column;
+
+          &-title {
+            display: flex;
+            justify-content: center;
+            color: #FFFFFF;
+            font-weight: 600;
+            margin-bottom: 8px;
+            font-size: 24px;
+            line-height: 30px;
+          }
+
+          &-subtitle {
+            display: flex;
+            justify-content: center;
+            color: #B9BBBE;
+            font-size: 16px;
+            line-height: 20px;
+          }
+        }
+
+        &-input {
+          width: 414px;
+          height: 64px;
+          display: flex;
+          flex-direction: column;
+          margin-top: 9px;
+
+          &-name {
+            color: #B9BBBE;
+            margin-bottom: 8px;
+            font-size: 12px;
+            line-height: 16px;
+            font-weight: 600;
+
+          }
+
+          &-input2 {
+            border: 1px #0000001A solid;
+            background-color: transparent;
+            height: 40px;
+            color: white;
+            font-size: 16px;
+            border-radius: 3px;
+            background-color: rgba(0, 0, 0, 0.16);
+            text-align: left;
+            padding: 10px;
+          }
+        }
+
+        &-forgot{
+          color: #00AFF4;
+          font-size: 14px;
+          margin-top: -7px;
+          margin-bottom: 7px;
+
+          &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+          }
+        }
+
+        &-button {
+          width: 414px;
+          height: 44px;
+          background-color: #5865f2;
+          color: white;
+          font-size: 16px;
+          margin-bottom: 8px;
+          border: none;
+          border-radius: 3px;
+          font-weight: 500;
+          transition: .17s ease;
+
+          &:hover{
+            background-color: #404EBF;
+          }
+        }
+
+        &-register{
+          margin-top: -11px;
+          display: flex;
+          flex-direction: row;
+          gap: 4px;
+
+          &-need {
+            color: #72767D;
+            font-size: 14px;
+          }
+
+          &-register2 {
+            color: #00AFF4;
+            font-size: 14px;
+
+            &:hover {
+              text-decoration: underline;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+
+      &-rightside {
+        width: 240px;
+        height: 344px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+  }
 }
 
 .FooterContainer {
